tests/98_func_param_missing_type.scj
// Test 98: Function parameter must have type annotation
func bad(x) {
    return x
}
// ExpectError: Function parameter 'x' missing type annotation
